# authoptions

auth0/: pyproject.toml
auth0/auth0/: main.py  utils.py
auth0/auth0/core/: config.py
auth0withcodebearer/: pyproject.toml
auth0withcodebearer/auth0withcodebearer/: main.py  utils.py
auth0withcodebearer/auth0withcodebearer/api/: deps.py
auth0withcodebearer/auth0withcodebearer/core/: config.py
